--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@studio-freight/react-lenis": "^0.0.47",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
     "gsap": "^3.12.5",
-    "lenis": "^1.1.4",
     "mini-svg-data-uri": "^1.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
