--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@studio-freight/react-lenis": "^0.0.47",
+    "@vercel/analytics": "^1.3.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
     "gsap": "^3.12.5",
