--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^11.4.0",
+    "gsap": "^3.12.5",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
