--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "framer-motion": "^11.4.0",
     "gsap": "^3.12.5",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.2"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^22.5.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.4.0",
@@ -36,6 +37,7 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
