--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "dependencies": {
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "framer-motion": "^11.4.0",
     "gsap": "^3.12.5",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^4.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^22.5.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
