--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@studio-freight/react-lenis": "^0.0.47",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
