--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@studio-freight/react-lenis": "^0.0.47",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -23,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "resend": "^4.0.0",
+    "sharp": "^0.33.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
