--- a/package.json
+++ b/package.json
@@ -14,19 +14,24 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@studio-freight/react-lenis": "^0.0.47",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "framer-motion": "^11.9.0",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.453.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^4.0.0",
     "sharp": "^0.33.5",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -45,7 +50,7 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
