--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "framer-motion": "^11.9.0",
+    "geist": "^1.3.1",
     "gsap": "^3.12.5",
     "lucide-react": "^0.453.0",
     "next": "14.2.7",
